# nixl

./: README.md  install_nixl.py  meson.build  meson_options.txt  pyproject.toml
benchmark/kvbench/: README.md
benchmark/kvbench/commands/: args.py
benchmark/kvbench/test/: custom_traffic_perftest.py  sequential_custom_traffic_perftest.py  traffic_pattern.py
benchmark/nixlbench/: meson.build  meson_options.txt
benchmark/nixlbench/src/synapseai/: meson.build  synapse_utils.cpp  synapse_utils.h
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/: meson.build  worker.cpp
benchmark/nixlbench/src/worker/nixl/: meson.build  nixl_worker.cpp  nixl_worker.h
src/core/: nixl_plugin_manager.cpp
src/plugins/: meson.build
src/plugins/libfabric/: README.md  libfabric_backend.cpp  libfabric_backend.h
src/plugins/ofi/: meson.build  ofi_backend.cpp  ofi_backend.h  ofi_plugin.cpp
src/utils/libfabric/: libfabric_common.cpp  libfabric_common.h  libfabric_rail.cpp  libfabric_rail.h  libfabric_rail_manager.cpp  libfabric_rail_manager.h  libfabric_topology.cpp  libfabric_topology.h
test/unit/plugins/: meson.build
test/unit/plugins/libfabric/: libfabric_backend_integration_test.cpp  meson.build
test/unit/plugins/ofi/: meson.build  ofi_backend_test.cpp
test/unit/utils/libfabric/: libfabric_topology_test.cpp
